--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ohmyfood",
   "version": "1.0.0",
   "description": "Projet 3 OPENCLASSROOMS OhMyFood",
-  "main": "index.js",
+  "main": "style.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass --watch style.scss style.css"
   },
   "repository": {
     "type": "git",
